[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mksim"
version = "1.0.0dev2"
description = "Minknow API Simulator server"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Sayan Goswami", email = "sayan.goswami@grlab.org" }
]
dependencies = [
    "read5>=1.2.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mksimserver = "mksim.server:main"
mksimclient = "mksim.client:main"
